Update and rename index.html to indx.html

--- a/indx.html
+++ b/indx.html
@@ -15,6 +15,7 @@
 </head>
 
 <body onload="loadSound()">
+<audio src="love.mp3" controls></audio>
     <div class="wrapper">
         <!-- Preloader -->
         <div id="preloader">
